--- a/style.css
+++ b/style.css
@@ -729,6 +729,13 @@ header {
   position: relative;
 }
 
+/* REFERENCES */
+.references-list {
+  font-size: 1.2rem;
+  padding: 3rem;
+  line-height: 2.6rem;
+}
+
 /*
     FOOTER 
   */
